修改 无法覆盖 整个页面的模态框

--- a/lwbModal/1.html
+++ b/lwbModal/1.html
@@ -25,12 +25,7 @@
         }
         #wrap-modal .modal-inner-box{
             background: #fff;
-            position: absolute;
-            top:0;
-            left:0;
-            right:0px;
-            bottom:0px;
-            margin:auto;
+            margin:10% auto;
             display: block;
         }
 
@@ -52,6 +47,7 @@
         </button>
     </div>
 
+        <div id="helloo" style="height:10000px;"></div>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery_lwbModal.js"></script>
     <script type="text/javascript">
