将 要模态框的元素  设置为fixed可以永远居中

--- a/lwbModal/1.html
+++ b/lwbModal/1.html
@@ -25,7 +25,12 @@
         }
         #wrap-modal .modal-inner-box{
             background: #fff;
-            margin:10% auto;
+            position: fixed;
+            top:0;
+            left:0;
+            bottom:0;
+            right:0;
+            margin:auto;
             display: block;
         }
 
