--- a/lwbToast/1.html
+++ b/lwbToast/1.html
@@ -28,7 +28,9 @@
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery_lwbToast.js"></script>
     <script type="text/javascript">
-    $('#show').lwbToast({text:'添加成功'});
+    $('#show').click(function(){
+        $('body').lwbToast({text:'添加成功'});
+    })
     </script>
 </body>
 </html>
